Fix dark mode in iOS13+ Books
iOS 13+ supports the `prefers-color-scheme` media query, so we can use that to invert images. The old and new versions play nicely together, in my testing on the latest versions at least.

--- a/se/data/templates/compatibility.css
+++ b/se/data/templates/compatibility.css
@@ -31,15 +31,27 @@ img[epub|type~="se:image.color-depth.black-on-transparent"][epub|type~="z3998:pu
 	background: transparent !important;
 }
 
-/* And except in Apple Books, where we can target night mode specifically */
+/* And except in prefers-color-scheme devices / Apple Books, where we can target dark mode specifically */
+/* Books on iOS 13+ and macOS 10.14 should support the media query, so the theme hack can be dropped when they’re the baseline. */
 :root[__ibooks_internal_theme] img[epub|type~="se:image.color-depth.black-on-transparent"]{
 	background: transparent !important;
 }
 
-/* Enable night mode in Apple Books */
 :root[__ibooks_internal_theme*="Night"] img[epub|type~="se:image.color-depth.black-on-transparent"],
 :root[__ibooks_internal_theme*="Gray"] img[epub|type~="se:image.color-depth.black-on-transparent"]{
 	filter: invert(100%);
+}
+
+@media (prefers-color-scheme){
+	img[epub|type~="se:image.color-depth.black-on-transparent"]{
+		background: transparent !important;
+	}
+}
+
+@media (prefers-color-scheme: dark){
+	img[epub|type~="se:image.color-depth.black-on-transparent"]{
+		filter: invert(100%);
+	}
 }
 
 /* Help preserve poetry formatting after Kobo adds its special <span>s */
